--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -23,6 +23,7 @@
   font-weight: bold;
   font-style: italic;
   text-align: center;
+  color: #1a1938;
 }
 
 .inner_content .para {
@@ -31,12 +32,15 @@
   font-weight: 300;
   color: #000000;
   text-align: justify;
+  letter-spacing: 0.7px;
   width: 70%;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .url_signin {
+  margin: 0 auto;
   margin-top: 20px;
+  text-align: center;
 }
 
 .url_signin a {
